--- a/style.css
+++ b/style.css
@@ -10,30 +10,60 @@ body {
   letter-spacing: 1px;
   min-width: 320px;
 }
+
+li {
+  list-style: none;
+}
+
+button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 50px;
+  color: #fff;
+}
+
 .wrap {
   width: 100%;
   height: 100vh;
   position: relative;
 }
 
+.see-the {
+  padding-top: 10px;
+}
 
-.logo {
+.hello {
   position: absolute;
   left: 50%;
   top: 40%;
-  margin-left: -110px;
+  width: 320px;
+  margin-left: -160px;
   margin-top: -30px;
   padding: 20px;
   transition: all .5s;
-  animation: trans 1.2s 5s forwards;
+  // animation: trans 1.2s 5s forwards;
+  display: flex;
+  z-index: 101;
 }
 
 @media (max-width: 678px) {
-  .logo {
-    animation: transMob 1.2s 5s forwards;
+  .hello {
+    // animation: transMob 1.2s 5s forwards;
   }
 }
 
+
+.voice {
+  // display: none;
+  opacity: 0;
+  animation: opa .5s  5.5s forwards;
+}
+
+.list {
+  margin: 0;
+  padding-left: 8px;
+}
 .equalizer {
   position: absolute;
   left: 0;
@@ -100,25 +130,25 @@ body {
   justify-content: center;
   height: calc(100vh - 60px);
 }
-.form {
+.mp3 {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-bottom: 100px;
   opacity: 0;
   animation: opa .8s 5.7s forwards;
+  transition: all .3s;
+  display: none;
 }
 
-.form .text {
+.mp3 .text {
   color: #fff;
   text-align: center;
   line-height: 1.5;
   transition: color .3s;
 }
-.form {
-  transition: all .3s;
-}
-.form:hover .text {
+
+.mp3:hover .text {
   color: #a3ff99;
   animation: color 4s .3s infinite;
 }
@@ -139,12 +169,12 @@ label {
   position: absolute;
   z-index: -1;
 }
-.form .file-open svg path,
-.form .file-open svg circle{
+.mp3 .file-open svg path,
+.mp3 .file-open svg circle{
   transition: all .5s;
 }
-.form:hover .file-open svg path, 
-.form:hover .file-open svg circle {
+.mp3:hover .file-open svg path, 
+.mp3:hover .file-open svg circle {
   stroke: #a3ff99;
   animation: strokeColor 4s .3s infinite;
 }
@@ -158,8 +188,6 @@ label {
   display: none;
 }
 
-
-
 .s {
   stroke-dasharray: 60;
   stroke-dashoffset: 60;
@@ -169,7 +197,6 @@ label {
 .ee {
   stroke-dasharray: 170;
   stroke-dashoffset: 170;
-  /*stroke: url(#linear);*/
   animation: dash .7s 1.8s linear forwards;
 }
 
@@ -187,7 +214,6 @@ label {
 .sound {
   stroke-dasharray: 560;
   stroke-dashoffset: 560;
-  /*stroke: url(#linear);*/
   animation: dash 2s 3.5s linear forwards;
 }
 
