--- a/style.css
+++ b/style.css
@@ -42,22 +42,44 @@ button {
   margin-top: -30px;
   padding: 20px;
   transition: all .5s;
-  // animation: trans 1.2s 5s forwards;
+  
   display: flex;
   z-index: 101;
 }
 
+.hello.move {
+  animation: trans 1.2s 1s  forwards;
+}
+
 @media (max-width: 678px) {
-  .hello {
-    // animation: transMob 1.2s 5s forwards;
+  .hello.move {
+    animation: transMob 1.2s 1s forwards;
   }
 }
 
+.item {
+  transition: all .5s;
+  display: block;
+  cursor: pointer;
+}
+
+.item svg path {
+  transition: all .5s;
+}
+.item:hover svg path {
+  stroke: #f05868;
+  // animation: strokeColor 3s infinite;
+}
+.item.collapse {
+  overflow: hidden;
+  max-height: 100px;
+  animation: collapse 1s forwards;
+}
 
 .voice {
-  // display: none;
   opacity: 0;
   animation: opa .5s  5.5s forwards;
+  font-size: 48px;
 }
 
 .list {
@@ -136,7 +158,7 @@ button {
   align-items: center;
   padding-bottom: 100px;
   opacity: 0;
-  animation: opa .8s 5.7s forwards;
+  animation: opa .8s 2s forwards;
   transition: all .3s;
   display: none;
 }
@@ -182,6 +204,10 @@ label {
 
 .dis-block {
   display: block;
+}
+
+.dis-flex {
+  display: flex;
 }
 
 .dis-none {
@@ -258,6 +284,15 @@ label {
   100% {stroke: #a3ff99} /*green*/
 }
 
+@keyframes strokeColorrr {
+  0% {stroke: #86ff40; stroke-dashoffset: 0;} /*green*/
+  20% {stroke: #97fcf9; stroke-dashoffset: 0;} /*sky*/
+  40% {stroke: #ffff99; stroke-dashoffset: 0;} /*yellow*/
+  60% {stroke: #ffe241; stroke-dashoffset: 0;} 
+  80% {stroke: #f05868; stroke-dashoffset: 0;} /*orange*/
+  100% {stroke: #a3ff99; stroke-dashoffset: 0;} /*green*/
+}
+
 @keyframes color {
   0% {color: #86ff40}
   20% {color: #97fcf9}
@@ -265,4 +300,17 @@ label {
   60% {color: #ffe241}
   80% {color: #f05868}
   100% {color: #a3ff99}
+}
+
+@keyframes collapse {
+  from {
+    max-height: 100px;
+    opacity: 1;
+    transform: scale(1);
+    }
+  to {
+      max-height: 0px;
+      opacity: 0;
+       transform: scale(0);
+    }
 }
