--- a/style.css
+++ b/style.css
@@ -48,11 +48,17 @@ button {
 
 .hello.move {
   animation: trans 1.2s 1s  forwards;
+  cursor: pointer;
 }
 
 @media (max-width: 678px) {
   .hello.move {
     animation: transMob 1.2s 1s forwards;
+  }
+
+  .hello {
+    display: flex;
+    justify-content: center;
   }
 }
 
@@ -76,8 +82,6 @@ button {
 }
 
 .voice {
-  opacity: 0;
-  animation: opa .5s  5.5s forwards;
   font-size: 48px;
 }
 
@@ -128,7 +132,7 @@ button {
   font-family: 'Dosis', Helvetica, Arial, sans-serif;
   font-size: 20px;
   letter-spacing: 1px;
-  margin-top: -.5em;
+  margin-top: 50px;
   border-radius: 50%;
 }
 
@@ -149,7 +153,7 @@ button {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: calc(100vh - 60px);
+  height: 100vh;
 }
 .upload {
   display: flex;
@@ -214,7 +218,30 @@ label {
 // }
 
 .record {
-  // display: none;
+  position: absolute;
+  top: 40px;
+  left: 0;
+  right: 0;
+  width: 100%;
+  text-align: center;
+  opacity: 0;
+  transition: all 1s;
+}
+
+.record.ap-disap {
+  animation: opaopa 7s forwards;
+}
+
+@media (max-width: 678px) {
+  .record {
+    top: 100px;
+  }
+
+  .record.ap-disap {
+    animation: opaopa 5s 1s forwards;
+  }
+
+
 }
 
 .dis-block {
@@ -229,24 +256,46 @@ label {
   display: none;
 }
 
-.s {
+.disabled {
+  pointer-events: none;
+  cursor: default;
+}
+
+.clickable {
+  cursor: pointer;
+}
+
+.appear {
+  animation: opa 1s 1.5s forwards;
+}
+
+
+.disappear {
+  animation: disappear 1s forwards;
+}
+
+svg path {
+  transition: all .1s;
+}
+
+.see-the__s {
   stroke-dasharray: 60;
   stroke-dashoffset: 60;
   animation: dash .3s 1.5s linear forwards;
 }
 
-.ee {
+.see-the__ee {
   stroke-dasharray: 170;
   stroke-dashoffset: 170;
   animation: dash .7s 1.8s linear forwards;
 }
 
-.t {
+.see-the__t {
   stroke-dasharray: 80;
   stroke-dashoffset: 80;
   animation: dash .3s 2.5s linear forwards;
 }
-.he {
+.see-the__he {
   stroke-dasharray: 220;
   stroke-dashoffset: 220;
   animation: dash .7s 2.8s linear forwards;
@@ -257,6 +306,32 @@ label {
   stroke-dashoffset: 560;
   animation: dash 2s 3.5s linear forwards;
 }
+
+.voice__v {
+  stroke-dasharray: 51;
+  stroke-dashoffset: 51;
+  animation: dash .2s 5.5s linear forwards;
+}
+
+.voice__o {
+  stroke-dasharray: 64;
+  stroke-dashoffset: 64;
+  animation: dash .2s 5.7s linear forwards;
+}
+
+.voice__i {
+  stroke-dasharray: 63;
+  stroke-dashoffset: 63;
+  animation: dash .1s 5.9s linear forwards;
+}
+
+.voice__ce {
+  stroke-dasharray: 82;
+  stroke-dashoffset: 82;
+  animation: dash .3s 5.9s linear forwards;
+}
+
+
 
 @keyframes dash {
   to {
@@ -271,6 +346,18 @@ label {
   }
 }
 
+@keyframes opaopa {
+  0% { opacity: 0; }
+  20% { opacity: 1; }
+  80% { opacity: 1; }
+  100% { opacity: 0; }
+}
+
+@keyframes disappear {
+  to {
+    opacity: 0;
+  }
+}
 
 @keyframes trans {
   to {
